fix: black background coloring bleeding into mobile view

--- a/portfolio/public/styles/hikes.css
+++ b/portfolio/public/styles/hikes.css
@@ -11,9 +11,6 @@
     padding-bottom: .9rem;
 }
 
-#hikeList {
-    background-color: black;
-}
 .carousel .slide img {
     max-height: 310px;
     object-fit: cover;
